新增、编辑用户改为当前页面弹框

--- a/web/views/user/list.html
+++ b/web/views/user/list.html
@@ -9,7 +9,7 @@
             <form class="layui-form" action="" onsubmit="javascript:return false;">
                 <div class="demoTable">
                     <div class="layui-inline" style="width: 40%">
-                        <input class="layui-input" name="realName" id="realName" autocomplete="off" placeholder="真实姓名" >
+                        <input class="layui-input" name="realName" id="realName" autocomplete="off" placeholder="真实姓名">
                     </div>
                     <button class="layui-btn" data-type="reload">查询</button>
                 </div>
@@ -22,17 +22,17 @@
 
     <script type="text/html" id="bar">
        <!--  <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a> -->
-        <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
-        <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="status">启|禁</a>
+    <a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
+    <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="status">启|禁</a>
     </script>
 </div>
 <script>
 
-    layui.use(['table','jquery'], function(){
+    layui.use(['table', 'jquery'], function () {
         var table = layui.table;
         var error_info = "{{.flashError}}";
-        if(error_info){
-            layer.msg(error_info,{icon: 2,shade:0.3},function () {
+        if (error_info) {
+            layer.msg(error_info, { icon: 2, shade: 0.3 }, function () {
                 window.history.go(-1)
             })
             return;
@@ -41,23 +41,23 @@
         //方法级渲染
         table.render({
             elem: '#table_list'
-            ,url: '/home/user/table'
-            ,cols: [[
+            , url: '/home/user/table'
+            , cols: [[
                 // {checkbox: true, fixed: true},
-                {field:'id', title: 'ID', align:'center',sort: true, width:150}
-                ,{field:'login_name',title: '登录账号'}
-                ,{field:'real_name', title: '真实姓名'}
-                ,{field:'phone', title: '联系电话'}
-                ,{field:'email', title: '电子邮箱'}
-                ,{field:'status_text', title: '状态'}
-                ,{fixed: 'right', width:160, align:'center', toolbar: '#bar'}
+                { field: 'id', title: 'ID', align: 'center', sort: true, width: 150 }
+                , { field: 'login_name', title: '登录账号' }
+                , { field: 'real_name', title: '真实姓名' }
+                , { field: 'phone', title: '联系电话' }
+                , { field: 'email', title: '电子邮箱' }
+                , { field: 'status_text', title: '状态' }
+                , { fixed: 'right', width: 160, align: 'center', toolbar: '#bar' }
             ]]
-            ,id: 'listReload'
-            ,page: true
+            , id: 'listReload'
+            , page: true
         });
 
         var $ = layui.$, active = {
-            reload: function(){
+            reload: function () {
                 table.reload('listReload', {
                     where: {
                         realName: $('#realName').val(),
@@ -66,33 +66,51 @@
             }
         };
 
-        $("#add").on("click",function() {
-            window.parent.openTab("/home/user/add",'新增用户',"admin_user_add-0",'fa-plus');
-        })
+        // $("#add").on("click",function() {
+        //     window.parent.openTab("/home/user/add",'新增用户',"admin_user_add-0",'fa-plus');
+        // })
+        // 修改为当前页面弹框
+        $("#add").on("click", function () {
+            layer.open({
+                type: 2,
+                title: '新增用户',
+                shadeClose: true,
+                shade: 0.8,
+                area: ['70%', '70%'],
+                content: '/home/user/add',
+            });
+        });
 
         //监听工具条
-        table.on('tool(table_filter)', function(obj){
+        table.on('tool(table_filter)', function (obj) {
             var data = obj.data;
             var real_name = data.real_name;
-            if(obj.event === 'edit'){
-                window.parent.openTab("/home/user/edit?id="+data.id, real_name+' 用户编辑', "admin_user_edit-"+data.id, 'fa-edit');
-            } else if(obj.event === 'status'){
+            if (obj.event === 'edit') {
+                // window.parent.openTab("/home/user/edit?id=" + data.id, real_name + ' 用户编辑', "admin_user_edit-" + data.id, 'fa-edit');
+                // 在编辑按钮点击事件中，触发弹框
+                layer.open({
+                    type: 2,
+                    title: real_name + ' 用户编辑',
+                    content: '/home/user/edit?id=' + data.id,
+                    area: ['65%', '65%'] // 设置弹框的宽度和高度
+                });
+            } else if (obj.event === 'status') {
                 acts = "禁用";
                 status = "disable";
                 if (data.status === 0) {
                     acts = '启用';
                     status = "enable";
                 }
-                if (data.id==1 && obj.event === 'disable') {
-                   layer.msg('超级管理员不允许操作');
-                   return false;
+                if (data.id == 1 && obj.event === 'disable') {
+                    layer.msg('超级管理员不允许操作');
+                    return false;
                 }
 
-                layer.confirm('真的'+acts+'【'+data.login_name+'】账号么？', function(index){
-                    var jsData = {'id':data.id,'status':status}
+                layer.confirm('真的' + acts + '【' + data.login_name + '】账号么？', function (index) {
+                    var jsData = { 'id': data.id, 'status': status }
                     $.post('/home/user/ajaxdel', jsData, function (out) {
                         if (out.status == 0) {
-                            layer.alert("操作成功", {icon: 1},function(index){
+                            layer.alert("操作成功", { icon: 1 }, function (index) {
                                 layer.close(index);
                                 window.location.reload();
                             });
@@ -103,12 +121,12 @@
                     layer.close(index);
                 })
 
-            }else{
+            } else {
                 layer.msg('操作不存在');
             }
         });
 
-        $('.demoTable .layui-btn').on('click', function(){
+        $('.demoTable .layui-btn').on('click', function () {
             var type = $(this).data('type');
             active[type] ? active[type].call(this) : '';
         });
