--- a/web/views/user/add.html
+++ b/web/views/user/add.html
@@ -6,11 +6,12 @@
         </blockquote>
     </div>
 
-    <form class="layui-form" action="" method="post" >
+    <form class="layui-form" action="" method="post">
         <div class="layui-form-item">
             <label class="layui-form-label">登录账号</label>
             <div class="layui-input-inline">
-                <input type="text" name="login_name" id="login_name" lay-verify="required" autocomplete="off" placeholder="登录账号" class="layui-input" value="">
+                <input type="text" name="login_name" id="login_name" lay-verify="required" autocomplete="off"
+                    placeholder="登录账号" class="layui-input" value="">
             </div>
             <div class="layui-form-mid layui-word-aux">*英文，数字或_,6位以上</div>
         </div>
@@ -18,7 +19,8 @@
         <div class="layui-form-item">
             <label class="layui-form-label">真实姓名</label>
             <div class="layui-input-inline">
-                <input type="text" name="real_name" id="real_name" lay-verify="required" autocomplete="off" placeholder="真实姓名" class="layui-input" value="">
+                <input type="text" name="real_name" id="real_name" lay-verify="required" autocomplete="off"
+                    placeholder="真实姓名" class="layui-input" value="">
             </div>
             <div class="layui-form-mid layui-word-aux">*</div>
         </div>
@@ -26,7 +28,8 @@
         <div class="layui-form-item">
             <label class="layui-form-label">手机号码</label>
             <div class="layui-input-inline">
-                <input type="text" name="phone" lay-verify="phone|required" autocomplete="off" placeholder="手机号码" class="layui-input" value="">
+                <input type="text" name="phone" lay-verify="phone|required" autocomplete="off" placeholder="手机号码"
+                    class="layui-input" value="">
             </div>
             <div class="layui-form-mid layui-word-aux">*</div>
         </div>
@@ -34,7 +37,8 @@
         <div class="layui-form-item">
             <label class="layui-form-label">电子邮箱</label>
             <div class="layui-input-inline">
-                <input type="text" name="email" id="email" lay-verify="email" autocomplete="off" placeholder="电子邮箱" class="layui-input" value="">
+                <input type="text" name="email" id="email" lay-verify="email" autocomplete="off" placeholder="电子邮箱"
+                    class="layui-input" value="">
             </div>
             <div class="layui-form-mid layui-word-aux">*</div>
         </div>
@@ -43,7 +47,7 @@
             <label class="layui-form-label">选择角色</label>
             <div class="layui-input-block">
                 {{range $k, $v := .role}}
-                    <input type="radio" name="role_id" lay-filter="role_id" title="{{$v.role_name}}" value="{{$v.id}}">
+                <input type="radio" name="role_id" lay-filter="role_id" title="{{$v.role_name}}" value="{{$v.id}}">
                 {{end}}
             </div>
         </div>
@@ -59,30 +63,32 @@
 
 <script>
     var $;
-    layui.config({base : "js/"}).use(['form','element','layer','jquery'],function(){
+    layui.config({ base: "js/" }).use(['form', 'element', 'layer', 'jquery'], function () {
         var form = layui.form; //只有执行了这一步，部分表单元素才会自动修饰成功
         var $ = layui.jquery;
         var role_ids = [];
 
         var error_info = "{{.flashError}}";
-        if(error_info){
-            layer.msg(error_info,{icon: 2,shade:0.3,time:1000},function () {
+        if (error_info) {
+            layer.msg(error_info, { icon: 2, shade: 0.3, time: 1000 }, function () {
                 window.history.go(-1)
             })
             return;
         }
 
-        form.on('submit(sub)', function(data){
+        form.on('submit(sub)', function (data) {
             var form_data = $("form").serialize();
             if (!data.field.role_id) {
-                layer.msg("请选择用户角色！",{icon: 5, time:1000});
+                layer.msg("请选择用户角色！", { icon: 5, time: 1000 });
                 return false;
             }
 
             $.post('/home/user/ajaxsave', form_data, function (out) {
                 if (out.status == 0) {
-                    layer.msg("操作成功",{icon: 1,shade:0.3,time:1000},function () {
-                        window.location.reload()
+                    layer.msg("操作成功", { icon: 1, shade: 0.3, time: 1000 }, function () {
+                        // window.location.reload()
+                        window.parent.layer.closeAll();
+                        window.parent.location.reload();
                     })
                 } else {
                     layer.msg(out.message)
